--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'libraryTest'
+include ':torus-direct-react-native-sdk'
+project(':torus-direct-react-native-sdk').projectDir = new File(rootProject.projectDir, '../node_modules/torus-direct-react-native-sdk/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
