--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,6 +121,8 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 def enableHermes = project.ext.react.get("enableHermes", false);
 
 android {
+    compileSdkVersion 26
+    buildToolsVersion '28.0.3'
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     compileOptions {
@@ -129,6 +131,7 @@ android {
     }
 
     defaultConfig {
+        manifestPlaceholders = [auth0Domain: "@string/com_auth0_domain", auth0Scheme: "demo"]
         applicationId "com.librarytest"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
